--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@ https://templatemo.com/tm-531-reflux
           <i class="fa fa-times" id="menu-close"></i>
           <div class="container">
             <div class="image">
-              <a href="#"><img src="assets/images/author-image.jpg" alt="" /></a>
+              <a href="#"><img src="assets/images/LinkedIn%20Photo.jpg" alt="" /></a>
             </div>
             <div class="author-content">
-              <h4>Reflux Me</h4>
-              <span>Web Designer</span>
+              <h4>Amey Athaley</h4>
+              <span>Data Scientist</span>
             </div>
             <nav class="main-nav" role="navigation">
               <ul class="main-menu">
                 <li><a href="#section1">About Me</a></li>
-                <li><a href="#section2">What I’m good at</a></li>
+                <li><a href="#section2">Projects</a></li>
                 <li><a href="#section3">My Work</a></li>
                 <li><a href="#section4">Contact Me</a></li>
               </ul>
@@ -84,30 +84,30 @@ https://templatemo.com/tm-531-reflux
           <div class="section-heading">
             <h2>About Me</h2>
             <div class="line-dec"></div>
-            <span
-              >This is a Bootstrap v4.2.1 CSS Template for you. Edit and use
-              this layout for your site. Updated on 21 May 2019 for repeated main menu HTML code.</span
+            <span> <P ALIGN='LEFT'>
+                Ideas have always been at the heart of all inspiration for me. As a child, I built a strong reading habit to whet my appetite for new ideas. Over the years, I realized that ideas and data are inseparable and learnt to quantify ideas with data. This gave me a keen eye for detail and nurtured strong articulation skills.</P>
+                <P ALIGN='LEFT'>
+                My segue into Analytics began with Mu Sigma, a data science company where I worked for 3 years. Having closely worked with experts in the line of analytics has helped me understand how businesses are adapting to the new data wave and the broad range of analytical functions applicable to online marketing. I find the profound impact that data can create and how it can drive changes in economy, governance and society to be truly exciting.</P>
+                <P ALIGN='LEFT'>
+                A rich, vibrant and highly competitive ecosystem at UT helped me sharpen my skills at solving problems that lie at the confluence of Business, Math and Technology during my master's degree. I am currently working at Amazon in the Payment Risk space.
+                </P>    </span
             >
           </div>
           <div class="left-image-post">
             <div class="row">
               <div class="col-md-6">
                 <div class="left-image">
-                  <img src="assets/images/left-image.jpg" alt="" />
+                  <img src="assets/images/CC_Fraud.jpeg" alt="" width="1"/>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="right-text">
-                  <h4>Reflux HTML CSS Template</h4>
+                  <h4>Credit Card Fraud Detection</h4>
                   <p>
-                    Donec tristique feugiat lacus, at sollicitudin nunc euismod
-                    sed. Mauris viverra, erat non sagittis gravida, elit dui
-                    mollis ante, sit amet eleifend purus ligula eget eros. Sed
-                    tincidunt quam vitae neque pharetra dignissim eget ut
-                    libero.
+                    Found creative ways to address class imbalance, choose the right evaluation metrics, iterate & evaluate machine learning models (logistic regression, random forest and LightGBM) and explore unsupervised method (T-SNE) to help visualize fraud transactions.
                   </p>
                   <div class="white-button">
-                    <a href="#">Read More</a>
+                    <a href="https://github.com/ameyathaley/Credit-Card-Fraud-Detection">Learn More</a>
                   </div>
                 </div>
               </div>
@@ -117,22 +117,18 @@ https://templatemo.com/tm-531-reflux
             <div class="row">
               <div class="col-md-6">
                 <div class="left-text">
-                  <h4>Sed sagittis rhoncus velit</h4>
+                  <h4>Distracted Driver Detection</h4>
                   <p>
-                    Pellentesque habitant morbi tristique senectus et netus et
-                    malesuada fames ac turpis egestas. Vestibulum fermentum
-                    eleifend nibh, vitae sodales elit finibus pretium.
-                    Suspendisse potenti. Ut sollicitudin risus a sollicitudin
-                    semper.
+                    Explored image processing, transfer learning, basics of CNN Architecture and ensembling deep learning frameworks. Ranked in the top 10 percentile in 2020.
                   </p>
                   <div class="white-button">
-                    <a href="#">Read More</a>
+                    <a href="https://towardsdatascience.com/distracted-driver-detection-using-deep-learning-e893715e02a4">Learn More</a>
                   </div>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="right-image">
-                  <img src="assets/images/right-image.jpg" alt="" />
+                  <img src="assets/images/DD_Deeplearning.png" alt="" />
                 </div>
               </div>
             </div>
@@ -146,53 +142,44 @@ https://templatemo.com/tm-531-reflux
             <h2>What I’m good at?</h2>
             <div class="line-dec"></div>
             <span
-              >Curabitur leo felis, rutrum vitae varius eu, malesuada a tortor.
-              Vestibulum congue leo et tellus aliquam, eu viverra nulla semper.
-              Nullam eu faucibus diam. Donec eget massa ante.</span
+              > </span
             >
           </div>
           <div class="row">
             <div class="col-md-6">
               <div class="service-item">
                 <div class="first-service-icon service-icon"></div>
-                <h4>HTML5 &amp; CSS3</h4>
-                <p>
-                  Phasellus non convallis dolor. Integer tempor hendrerit arcu
-                  at bibendum. Sed ac ante non metus vehicula congue quis eget
-                  eros.
+                <h4>Experimental Design :</h4>
+                <p> Randomized Control Trials ; Causal Inference Design ; A/B Testing ; Difference in Difference Method; Fixed Effects Model
+                 
                 </p>
               </div>
             </div>
             <div class="col-md-6">
               <div class="service-item">
                 <div class="second-service-icon service-icon"></div>
-                <h4>Creative Ideas</h4>
+                <h4>Supervised & Unsupervised Methods</h4>
                 <p>
-                  Proin lacus massa, eleifend sed fermentum in, dignissim vel
-                  metus. Nunc accumsan leo nec felis porttitor, ultricies
-                  faucibus purus mollis.
+                   Linear Regression, Logistic Regression, LDA, KNN, Lasso, Ridge, PCA, K-means clustering, CART, Naïve Bayes, Support
+Vector Machines (SVM), ARIMA, Gradient Boosted Trees, Bootstrapping
                 </p>
               </div>
             </div>
             <div class="col-md-6">
               <div class="service-item">
                 <div class="third-service-icon service-icon"></div>
-                <h4>Easy Customize</h4>
+                <h4>Data Engineering & Business Reporting</h4>
                 <p>
-                  Integer suscipit condimentum aliquet. Nam quis risus metus.
-                  Nullam faucibus quam eget arcu pretium tincidunt. Nam libero
-                  dui.
+                  Building ETL frameworks; Optimize Data Pipelines Dashboards to track Business KPIs; Interactive Visualization using Tableau & Qliksense
                 </p>
               </div>
             </div>
             <div class="col-md-6">
               <div class="service-item">
                 <div class="fourth-service-icon service-icon"></div>
-                <h4>Admin Dashboard</h4>
+                <h4>Timeseries Analysis</h4>
                 <p>
-                  Vivamus et dui a massa venenatis fringilla. Proin lacus massa,
-                  eleifend sed fermentum in, dignissim vel metus. Nunc accumsan
-                  leo nec felis porttitor.
+                  Data Exploration ; Concepts of Stationarity, ACF, PACF and working of ETS and Arima models
                 </p>
               </div>
             </div>
@@ -206,9 +193,7 @@ https://templatemo.com/tm-531-reflux
             <h2>My Work</h2>
             <div class="line-dec"></div>
             <span
-              >Aenean sollicitudin ex mauris, lobortis lobortis diam euismod sit
-              amet. Duis ac elit vulputate, lobortis arcu quis, vehicula
-              mauris.</span
+              ></span
             >
           </div>
           <div class="row">
@@ -221,7 +206,7 @@ https://templatemo.com/tm-531-reflux
                     checked=""
                     name="isotope-filter"
                   />
-                  <span>all</span></label
+                  <span>Project 1</span></label
                 >
                 <label
                   ><input
@@ -229,7 +214,7 @@ https://templatemo.com/tm-531-reflux
                     data-type="people"
                     name="isotope-filter"
                   />
-                  <span>people</span></label
+                  <span>Project 2</span></label
                 >
                 <label
                   ><input
@@ -237,7 +222,7 @@ https://templatemo.com/tm-531-reflux
                     data-type="nature"
                     name="isotope-filter"
                   />
-                  <span>nature</span></label
+                  <span>Project 3</span></label
                 >
                 <label
                   ><input
@@ -245,19 +230,19 @@ https://templatemo.com/tm-531-reflux
                     data-type="animals"
                     name="isotope-filter"
                   />
-                  <span>animals</span></label
+                  <span>Project 4</span></label
                 >
               </form>
               <div class="isotope-box">
                 <div class="isotope-item" data-type="nature">
                   <figure class="snip1321">
                     <img
-                      src="assets/images/portfolio-01.jpg"
-                      alt="sq-sample26"
+                      src=""
+                      alt=""
                     />
                     <figcaption>
                       <a
-                        href="assets/images/portfolio-01.jpg"
+                        href=""
                         data-lightbox="image-1"
                         data-title="Caption"
                         ><i class="fa fa-search"></i
@@ -271,12 +256,12 @@ https://templatemo.com/tm-531-reflux
                 <div class="isotope-item" data-type="people">
                   <figure class="snip1321">
                     <img
-                      src="assets/images/portfolio-02.jpg"
-                      alt="sq-sample26"
+                      src=""
+                      alt=""
                     />
                     <figcaption>
                       <a
-                        href="assets/images/portfolio-02.jpg"
+                        href=""
                         data-lightbox="image-1"
                         data-title="Caption"
                         ><i class="fa fa-search"></i
@@ -290,12 +275,12 @@ https://templatemo.com/tm-531-reflux
                 <div class="isotope-item" data-type="animals">
                   <figure class="snip1321">
                     <img
-                      src="assets/images/portfolio-03.jpg"
-                      alt="sq-sample26"
+                      src=""
+                      alt=""
                     />
                     <figcaption>
                       <a
-                        href="assets/images/portfolio-03.jpg"
+                        href=""
                         data-lightbox="image-1"
                         data-title="Caption"
                         ><i class="fa fa-search"></i
@@ -309,12 +294,12 @@ https://templatemo.com/tm-531-reflux
                 <div class="isotope-item" data-type="people">
                   <figure class="snip1321">
                     <img
-                      src="assets/images/portfolio-04.jpg"
-                      alt="sq-sample26"
+                      src=""
+                      alt=""
                     />
                     <figcaption>
                       <a
-                        href="assets/images/portfolio-04.jpg"
+                        href=""
                         data-lightbox="image-1"
                         data-title="Caption"
                         ><i class="fa fa-search"></i
@@ -328,12 +313,12 @@ https://templatemo.com/tm-531-reflux
                 <div class="isotope-item" data-type="nature">
                   <figure class="snip1321">
                     <img
-                      src="assets/images/portfolio-05.jpg"
-                      alt="sq-sample26"
+                      src=""
+                      alt=""
                     />
                     <figcaption>
                       <a
-                        href="assets/images/portfolio-05.jpg"
+                        href=""
                         data-lightbox="image-1"
                         data-title="Caption"
                         ><i class="fa fa-search"></i
@@ -347,12 +332,12 @@ https://templatemo.com/tm-531-reflux
                 <div class="isotope-item" data-type="animals">
                   <figure class="snip1321">
                     <img
-                      src="assets/images/portfolio-06.jpg"
-                      alt="sq-sample26"
+                      src=""
+                      alt=""
                     />
                     <figcaption>
                       <a
-                        href="assets/images/portfolio-06.jpg"
+                        href=""
                         data-lightbox="image-1"
                         data-title="Caption"
                         ><i class="fa fa-search"></i
