--- a/index.html
+++ b/index.html
@@ -359,9 +359,7 @@ Vector Machines (SVM), ARIMA, Gradient Boosted Trees, Bootstrapping
             <h2>Contact Me</h2>
             <div class="line-dec"></div>
             <span
-              >Fusce eget nibh nec justo interdum condimentum. Morbi justo ex,
-              efficitur at ante ac, tincidunt maximus ligula. Lorem ipsum dolor
-              sit amet, consectetur adipiscing elit.</span
+              ></span
             >
           </div>
           <div class="row">
